# ostis-microclimate

./: .gitignore  README.md
interface/arduino/serial/: serial.ino
interface/hardware_client/: comport_connection.py  hardware_client.py  requirements.txt  run.py  serializers.py
kb/: microclimate.scs
problem-solver/py/: CMakeLists.txt
problem-solver/py/MicroClimateChartAgent/: CMakeLists.txt  mcModule.cpp  mcModule.hpp  mcService.hpp
problem-solver/py/MicroClimateChartScript/: CMakeLists.txt  mcModule.cpp  mcModule.hpp  mcService.hpp
problem-solver/py/services/MicroClimateChartAgent/: MicroClimateChartAgent.py  MicroClimateChartModule.py
problem-solver/py/services/MicroClimateChartScript/: DrawChart.py  config.json
